<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarHeight"
        android:background="@color/toolBarBackground"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/smart_house"
            android:textColor="@color/text_color_white"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_width"
            android:layout_margin="6dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#ffffff"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="100dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/led_control"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_custom_selector"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/led_control" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/led_control"
                    android:textColor="@color/colorLed"
                    android:textSize="16sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <View
            android:layout_width="40dp"
            android:layout_height="@dimen/toolbarHeight" />

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_width"
            android:layout_margin="6dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#ffffff"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="100dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/temp_control"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_custom_selector"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/temp_control" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_control"
                    android:textColor="@color/colorLed"
                    android:textSize="16sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_width"
            android:layout_margin="6dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#ffffff"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="100dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/light_control"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_custom_selector"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/light_control" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_control"
                    android:textColor="@color/colorLed"
                    android:textSize="16sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <View
            android:layout_width="40dp"
            android:layout_height="@dimen/toolbarHeight" />

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_width"
            android:layout_margin="6dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#ffffff"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="100dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/security_control"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_custom_selector"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/security_control" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/security_control"
                    android:textColor="@color/colorLed"
                    android:textSize="16sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_width"
            android:layout_margin="6dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#ffffff"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="100dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/gas_control"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_custom_selector"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/gas_control" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gas_control"
                    android:textColor="@color/colorLed"
                    android:textSize="16sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <View
            android:layout_width="40dp"
            android:layout_height="@dimen/toolbarHeight" />

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_width"
            android:layout_margin="6dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#ffffff"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="100dp"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/video_control"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_custom_selector"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/video_control" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_control"
                    android:textColor="@color/colorLed"
                    android:textSize="16sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</LinearLayout>
