<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarHeight"
        android:background="@color/toolBarBackground"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/security_control"
            android:textColor="@color/text_color_white"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#ffffff"
        app:contentPadding="8dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="100dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_bash_room"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:src="@mipmap/bash_room" />


            <TextView
                android:id="@+id/label_bash_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/img_bash_room"
                android:text="@string/bash_room"
                android:textColor="@color/colorLed"
                android:textSize="22sp" />


            <ImageView
                android:id="@+id/security_icon_bash_room"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:src="@mipmap/in_reading_security" />

            <TextView
                android:id="@+id/security_bash_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:layout_toLeftOf="@id/security_icon_bash_room"
                android:text="@string/in_reading"
                android:textColor="@color/color_std_green"
                android:textSize="22sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#ffffff"
        app:contentPadding="8dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="100dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_chicken"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:src="@mipmap/chicken" />


            <TextView
                android:id="@+id/label_chicken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/img_chicken"
                android:text="@string/chicken"
                android:textColor="@color/colorLed"
                android:textSize="22sp" />


            <ImageView
                android:id="@+id/security_icon_chicken"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:src="@mipmap/in_reading_security" />

            <TextView
                android:id="@+id/security_chicken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:layout_toLeftOf="@id/security_icon_chicken"
                android:text="@string/in_reading"
                android:textColor="@color/color_std_green"
                android:textSize="22sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#ffffff"
        app:contentPadding="8dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="100dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_living_room"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:src="@mipmap/living_room" />


            <TextView
                android:id="@+id/label_living_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/img_living_room"
                android:text="@string/living_room"
                android:textColor="@color/colorLed"
                android:textSize="22sp" />


            <ImageView
                android:id="@+id/security_icon_living_room"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:src="@mipmap/in_reading_security" />

            <TextView
                android:id="@+id/security_living_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:layout_toLeftOf="@id/security_icon_living_room"
                android:text="@string/in_reading"
                android:textColor="@color/color_std_green"
                android:textSize="22sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#ffffff"
        app:contentPadding="8dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="100dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_bed_room"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:src="@mipmap/bed_room" />


            <TextView
                android:id="@+id/label_bed_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/img_bed_room"
                android:text="@string/bed_room"
                android:textColor="@color/colorLed"
                android:textSize="22sp" />


            <ImageView
                android:id="@+id/security_icon_bed_room"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:src="@mipmap/in_reading_security" />

            <TextView
                android:id="@+id/security_bed_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:layout_toLeftOf="@id/security_icon_bed_room"
                android:text="@string/in_reading"
                android:textColor="@color/color_std_green"
                android:textSize="22sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
